--- a/index.html
+++ b/index.html
@@ -49,22 +49,14 @@
                 <!-- begin navbar-collapse -->
                 <div class="collapse navbar-collapse" id="header-navbar">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active dropdown">
-                            <a href="#home" data-click="scroll-to-target" data-toggle="dropdown">HOME <b class="caret"></b></a>
-                            <ul class="dropdown-menu dropdown-menu-left animated fadeInDown">
-                                <li><a href="index.html">Page with Transparent Header</a></li>
-                                <li><a href="index_inverse_header.html">Page with Inverse Header</a></li>
-                                <li><a href="index_default_header.html">Page with White Header</a></li>
-                                <li><a href="extra_element.html">Extra Element</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#home" data-click="scroll-to-target">网站首页</a></li>
                         <li><a href="#about" data-click="scroll-to-target">ABOUT</a></li>
                         <li><a href="#team" data-click="scroll-to-target">TEAM</a></li>
                         <li><a href="#service" data-click="scroll-to-target">SERVICES</a></li>
                         <li><a href="#work" data-click="scroll-to-target">WORK</a></li>
                         <li><a href="#client" data-click="scroll-to-target">CLIENT</a></li>
                         <li><a href="#pricing" data-click="scroll-to-target">PRICING</a></li>
-                        <li><a href="#contact" data-click="scroll-to-target">CONTACT</a></li>
+                        <li><a href="#contact" data-click="scroll-to-target">联系我们</a></li>
                     </ul>
                 </div>
                 <!-- end navbar-collapse -->
