--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="index.html" class="navbar-brand">
                         <span class="brand-logo"></span>
                         <span class="brand-text">
-                            <span class="text-theme">Color</span> Admin
+                            <span class="text-theme">星云</span> 科技
                         </span>
                     </a>
                 </div>
@@ -74,8 +74,8 @@
             <!-- end content-bg -->
             <!-- begin container -->
             <div class="container home-content">
-                <h1>Welcome to Color Admin</h1>
-                <h3>Multipurpose One Page Theme</h3>
+                <h1>技术驱动商业 · 星云科技</h1>
+                <h3>助力中小企业信息、数据、智能化发展。</h3>
                 <p>
                     We have created a multi-purpose theme that take the form of One-Page or Multi-Page Version.<br />
                     Use our <a href="#">theme panel</a> to select your favorite theme color.
