--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <li><a href="#home" data-click="scroll-to-target">网站首页</a></li>
                         <li><a href="#about" data-click="scroll-to-target">ABOUT</a></li>
                         <li><a href="#team" data-click="scroll-to-target">TEAM</a></li>
-                        <li><a href="#service" data-click="scroll-to-target">SERVICES</a></li>
+                        <li><a href="#service" data-click="scroll-to-target">服务项目</a></li>
                         <li><a href="#work" data-click="scroll-to-target">WORK</a></li>
                         <li><a href="#client" data-click="scroll-to-target">CLIENT</a></li>
                         <li><a href="#pricing" data-click="scroll-to-target">PRICING</a></li>
@@ -346,7 +346,7 @@
         <div id="service" class="content" data-scrollview="true">
             <!-- begin container -->
             <div class="container">
-                <h2 class="content-title">Our Services</h2>
+                <h2 class="content-title">服务项目</h2>
                 <p class="content-desc">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur eros dolor,<br />
                     sed bibendum turpis luctus eget
