--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="collapse navbar-collapse" id="header-navbar">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#home" data-click="scroll-to-target">网站首页</a></li>
-                        <li><a href="#about" data-click="scroll-to-target">ABOUT</a></li>
+                        <li><a href="#about" data-click="scroll-to-target">关于我们</a></li>
                         <li><a href="#team" data-click="scroll-to-target">TEAM</a></li>
                         <li><a href="#service" data-click="scroll-to-target">服务项目</a></li>
                         <li><a href="#work" data-click="scroll-to-target">WORK</a></li>
@@ -92,10 +92,11 @@
         <div id="about" class="content" data-scrollview="true">
             <!-- begin container -->
             <div class="container" data-animation="true" data-animation-type="fadeInDown">
-                <h2 class="content-title">About Us</h2>
-                <p class="content-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur eros dolor,<br />
-                    sed bibendum turpis luctus eget
+                <h2 class="content-title">关于我们</h2>
+                <p class="content-desc" style="font-size:16px;text-align:left">
+                    　　星云无限科技发展有限公司是一家专注科技创新、具有自主知识产权的科技型企业。在大数据、电子商务、人工智能、智能办公领域具备专业性人才，已帮助多行业企业实现与联网+综合发展，辅助企业建立互联网推广媒介以及行业移动、数字应用平台。<br />
+                    　　星云无限创立于2016年，在党中央大力号召大众创业、万众创新的背景下应运而生，企业创始人专注技术领域的发展与实践，在创立企业初就已经具备了十余年的行业经验，包括技术开发、团队管理、项目管理、运维运营。专业与专注是星云无限的根本优势，是企业立足与发展在芸芸众商中且拥有广阔前景的基石。企业在创始人的带领下集结多位行业精英，奋力拼搏、敬业爱岗，始终不渝为中国互联网事业贡献自己的热忱。<br />
+                    　　星云无限专注中小企业在移动互联、数字营销、人工智能与大数据背景下专注自身核心业务的综合性发展，为企业管理、营销、策划、宣传等多方面提供IT、互联网综合一站式解决方案。客户的信赖是我们坚实的脚步，为客户创造更高的价值使我们始终的目标。
                 </p>
                 <!-- begin row -->
                 <div class="row">
@@ -105,18 +106,18 @@
                         <div class="about">
                             <h3>Our Story</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Vestibulum posuere augue eget ante porttitor fringilla. 
-                                Aliquam laoreet, sem eu dapibus congue, velit justo ullamcorper urna, 
-                                non rutrum dolor risus non sapien. Vivamus vel tincidunt quam. 
-                                Donec ultrices nisl ipsum, sed elementum ex dictum nec. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Vestibulum posuere augue eget ante porttitor fringilla.
+                                Aliquam laoreet, sem eu dapibus congue, velit justo ullamcorper urna,
+                                non rutrum dolor risus non sapien. Vivamus vel tincidunt quam.
+                                Donec ultrices nisl ipsum, sed elementum ex dictum nec.
                             </p>
                             <p>
-                                In non libero at orci rutrum viverra at ac felis. 
-                                Curabitur a efficitur libero, eu finibus quam. 
-                                Pellentesque pretium ante vitae est molestie, ut faucibus tortor commodo. 
-                                Donec gravida, eros ac pretium cursus, est erat dapibus quam, 
-                                sit amet dapibus nisl magna sit amet orci. 
+                                In non libero at orci rutrum viverra at ac felis.
+                                Curabitur a efficitur libero, eu finibus quam.
+                                Pellentesque pretium ante vitae est molestie, ut faucibus tortor commodo.
+                                Donec gravida, eros ac pretium cursus, est erat dapibus quam,
+                                sit amet dapibus nisl magna sit amet orci.
                             </p>
                         </div>
                         <!-- end about -->
