--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                 <h1>技术驱动商业 · 星云科技</h1>
                 <h3>助力中小企业信息、数据、智能化发展。</h3>
                 <p>
-                    We have created a multi-purpose theme that take the form of One-Page or Multi-Page Version.<br />
-                    Use our <a href="#">theme panel</a> to select your favorite theme color.
+                    Technology Driven Business · <a href="http://www.enebula.cn">Nebula Technology</a>
                 </p>
                 <a href="#service" data-click="scroll-to-target" class="btn btn-theme">服务项目</a> <a href="#work" data-click="scroll-to-target" class="btn btn-outline">成功案例</a><br />
                 <br />
