--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                 </div>
                 <p>
                     Copyright &copy; 1996-2018 Nebula Unlimited All Rights Reserved.<br />
-                    An admin & front end theme with serious impact. Created by <a href="http://www.miibeian.gov.cn" target="_blank">津ICP备XXXX号</a>
+                    An admin & front end theme with serious impact. Created by <a href="http://beian.miit.gov.cn" target="_blank">津ICP备20005422号</a>
                 </p>
                 <p class="social-list">
                     <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
